--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "",
   "description": "",
+   "engines": {
+    "node": "10.x"
+  }
   "devDependencies": {
     "apollo-server": "^2.4.8",
     "graphql": "^14.1.1"
